syntax = "proto3";

package calculator;

option go_package = "github.com/ddiogoo/grpc/calculator/proto";

message CalculatorRequest {
  int32 first_number = 1;
  int32 second_number = 2;
}

message CalculatorResponse {
  int32 result = 1;
}

service CalculatorService {
  rpc Add(CalculatorRequest) returns (CalculatorResponse);
  rpc Subtract(CalculatorRequest) returns (CalculatorResponse);
  rpc Multiply(CalculatorRequest) returns (CalculatorResponse);
  rpc Divide(CalculatorRequest) returns (CalculatorResponse);
}
